# GameOfLife

./: CMakeLists.txt  README.md  input.txt  rule.cpp  rule.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  myexec  output.txt  rule.cpp  rule.h
test/: CMakeLists.txt  catch.hpp  test.cpp
videocreator/: README.md  videogame.py
